# vlink

./: .clang-tidy  .gitattributes  .gitignore  Android.bp  CHANGELOG.md  CMakeLists.txt  README.en_us.md  README.md  claude-check.md  conanfile.py
c_api/: CMakeLists.txt  c_api.cc
c_api/test/: CMakeLists.txt  c_api_schema_test.cc  c_api_test.c
cli/bench/: CMakeLists.txt  bench.cc  bench.h  main.cc  report.cc  report.h  report_helpers.cc  report_helpers.h  report_html.cc  report_html_css.h  report_html_en_us.h  report_html_i18n.h  report_html_zh_cn.h  report_internal.cc  report_internal.h  report_score.h
cli/check/: CMakeLists.txt  check.cc
cli/dump/: CMakeLists.txt  dump.cc
cli/efbs/: CMakeLists.txt  efbs.cc  idl_gen_text.h
cli/eproto/: CMakeLists.txt  eproto.cc
cli/list/: CMakeLists.txt  list.cc
cli/monitor/: CMakeLists.txt  monitor.cc
doc/: 00-whitepaper.md  01-build.md  02-node-lifecycle.md  03-event-model.md  04-method-model.md  05-field-model.md  06-serialization.md  07-transport.md  08-qos.md  09-security.md  10-zerocopy.md  11-base-library.md  12-bag-recording.md  13-cli-tools.md  14-viewer.md  15-webviz.md  16-proxy.md  17-discovery.md  18-c-api.md  19-extensions.md  20-testing.md  21-environment-vars.md  22-examples.md  90-cheatsheet.md  91-troubleshooting.md  92-pr-conventions.md  CMakeLists.txt  Doxyfile.en_us.in  Doxyfile.zh_cn.in
doc/images/: bag-architecture.drawio  bag-reader-processor-flow.drawio  bag-record-playback-flow.drawio  bytes-memory-layout.drawio  bytes-ownership.drawio  c-api-wrapper.drawio  camera-frame-structure.drawio  cancellation-model.drawio  cli-tools-overview.drawio  cmake-build-flow.drawio  conan-build-flow.drawio  cross-platform-support.drawio  discovery-architecture.drawio  discovery-dataflow-sequence.drawio  discovery-lifecycle.drawio  discovery-network.drawio  env-var-loading.drawio  event-dataflow.drawio  examples-directory-tree.drawio  field-dataflow.drawio  field-multi-getter.drawio  foreword-cli-tools-table.drawio  foreword-event-flow.drawio  foreword-field-flow.drawio  foreword-heterogeneous-platform.drawio  foreword-latency-comparison.drawio  foreword-layered-architecture.drawio  foreword-method-flow.drawio  foreword-node-lifecycle.drawio  foreword-player-linkage.drawio  foreword-projection-flow.drawio  foreword-software-stack.drawio  foreword-viewer-workflow.drawio  graph-task-dag.drawio  helloworld-example-flow.drawio  message-loop-alive-state.drawio  message-loop-concept.drawio  method-dataflow.drawio  method-model-comparison.drawio  multi-subscriber-pattern.drawio  (+30 more)
examples/: CMakeLists.txt  README.md
examples/base/: CMakeLists.txt  README.md
examples/c_api/: CMakeLists.txt  README.md
examples/cmake/: example_standalone.cmake
examples/communication/: CMakeLists.txt  README.md
examples/node_features/: CMakeLists.txt  README.md
examples/plugin/: CMakeLists.txt  README.md
examples/proxy/: CMakeLists.txt  README.md
examples/qos/: CMakeLists.txt  README.md
examples/quickstart/: CMakeLists.txt  README.md
examples/recording/: CMakeLists.txt  README.md
examples/samples/: Android.bp  CMakeLists.txt  README.md  common_transport.h
examples/security/: CMakeLists.txt  README.md
examples/serialization/: CMakeLists.txt  README.md
examples/url_guide/: CMakeLists.txt  README.md
examples/zerocopy/: CMakeLists.txt  README.md
modules/dds/: CMakeLists.txt  dds_client_impl.cc  dds_client_impl.h  dds_conf.cc  dds_factory.cc  dds_factory.h  dds_getter_impl.cc  dds_getter_impl.h  dds_publisher_impl.cc  dds_publisher_impl.h  dds_qos.h  dds_server_impl.cc  dds_server_impl.h  dds_setter_impl.cc  dds_setter_impl.h  dds_status_listener.cc  dds_status_listener.h  dds_subscriber_impl.cc  dds_subscriber_impl.h
modules/ddsc/: CMakeLists.txt  ddsc_client_impl.cc  ddsc_client_impl.hpp  ddsc_conf.cc  ddsc_factory.cc  ddsc_factory.hpp  ddsc_getter_impl.cc  ddsc_getter_impl.hpp  ddsc_proxy.cc  ddsc_proxy.hpp  ddsc_publisher_impl.cc  ddsc_publisher_impl.hpp  ddsc_qos.hpp  ddsc_server_impl.cc  ddsc_server_impl.hpp  ddsc_setter_impl.cc  ddsc_setter_impl.hpp  ddsc_status_listener.cc  ddsc_status_listener.hpp  ddsc_subscriber_impl.cc  ddsc_subscriber_impl.hpp
modules/ddsr/: CMakeLists.txt  ddsr_client_impl.cc  ddsr_client_impl.hpp  ddsr_conf.cc  ddsr_factory.cc  ddsr_factory.hpp  ddsr_getter_impl.cc  ddsr_getter_impl.hpp  ddsr_proxy.cc  ddsr_proxy.hpp  ddsr_publisher_impl.cc  ddsr_publisher_impl.hpp  ddsr_qos.hpp  ddsr_server_impl.cc  ddsr_server_impl.hpp  ddsr_setter_impl.cc  ddsr_setter_impl.hpp  ddsr_status_listener.cc  ddsr_status_listener.hpp  ddsr_subscriber_impl.cc  ddsr_subscriber_impl.hpp
proxy/: CMakeLists.txt  proxy.cc  proxy.proto  proxy_common.h  proxy_macros.h
proxy/etc/: proxy_roudi.toml  proxy_roudi_large.toml  proxy_roudi_small.toml
python_api/: CMakeLists.txt  test_vlink.py  test_vlink_coverage.py  test_vlink_full.py  vlink.py  vlink_python.cc
test/: CMakeLists.txt  common_test.h  dds_test.cc  ddsc_test.cc  ddsr_test.cc  ddst_test.cc  fdbus_test.cc  intra_test.cc  main.cc  mqtt_test.cc  qnx_test.cc  security_test_helpers.h  serializer_test.cc  shm2_test.cc  shm_test.cc  someip_test.cc  zenoh_test.cc
viewer/: CMakeLists.txt  aboutdialog.cc  aboutdialog.h  aboutdialog.ui  analyzedialog.cc  analyzedialog.h  analyzedialog.ui  cameradialog.cc  cameradialog.h  cameradialog.ui  editdialog.cc  editdialog.h  editdialog.ui  ffmpeg_decoder.cc  ffmpeg_decoder.h  flatbuffers_runtime.cc  flatbuffers_runtime.h  flatbuffers_runtime_compat.h  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  playdialog.cc  playdialog.h  playdialog.ui  point3ddialog.cc  point3ddialog.h  point3ddialog.ui  projectiondialog.cc  projectiondialog.h  projectiondialog.ui  rawdialog.cc  rawdialog.h  rawdialog.ui  recorddialog.cc  recorddialog.h  recorddialog.ui  resource.qrc  settingsdialog.cc  settingsdialog.h  (+6 more)
webviz/: CMakeLists.txt  proxy_bridge.cc  proxy_bridge.h  proxy_config.cc  proxy_config.h  webviz_app_utils.h  webviz_bridge_utils.h  webviz_common.h  webviz_loader_utils.h  webviz_time_utils.h  webviz_types.h
(+1197 files in other folders)
